@@ -11,15 +11,16 @@
 
 <p>SQL Relay is a persistent database connection pooling, proxying and load 
 balancing system for Unix and Linux supporting ODBC, Oracle, MySQL, mSQL, 
-PostgreSQL, Sybase, MS SQL Server, IBM DB2, Interbase, Lago and SQLite with 
-APIs for C, C++, Perl, Perl-DBI, Python, Python-DB, Zope, PHP, Ruby, Ruby-DBI,
-Java and TCL, drop-in replacement libraries for MySQL and PostgreSQL clients,
-command line clients, a GUI configuration tool and extensive documentation.
-The APIs support advanced database operations such as bind variables, multi-row
-fetches, client side result set caching and suspended transactions.  It is
-ideal for speeding up database-driven web-based applications, accessing
-databases from unsupported platforms, migrating between databases, distributing
-access to replicated databases and throttling database access.</p>
+PostgreSQL, Sybase, MS SQL Server, IBM DB2, Interbase, Lago, SQLite and
+MS Access (minimally) with APIs for C, C++, Perl, Perl-DBI, Python,
+Python-DB, Zope, PHP, Ruby, Ruby-DBI, Java and TCL, drop-in replacement
+libraries for MySQL and PostgreSQL clients, command line clients, a GUI
+configuration tool and extensive documentation.  The APIs support advanced
+database operations such as bind variables, multi-row fetches, client side
+result set caching and suspended transactions.  It is ideal for speeding up
+database-driven web-based applications, accessing databases from unsupported
+platforms, migrating between databases, distributing access to replicated
+databases and throttling database access.</p>
 <br>
 
 <span class="heading2">Introduction</span><br>
@@ -51,6 +52,8 @@ access to replicated databases and throttling database access.</p>
 <a href="gettingstarted/lago.html">Getting Started With Lago</a><br>
 <img src="invisible.gif" height="1" width="20" alt="  ">
 <a href="gettingstarted/sqlite.html">Getting Started With SQLite</a><br>
+<img src="invisible.gif" height="1" width="20" alt="  ">
+<a href="gettingstarted/access.html">Getting Started With Microsoft Access</a><br>
 <br>
 
 <span class="heading2">Administering SQL Relay</span><br>
