@@ -1,11 +1,12 @@
 SQL Relay is a persistent database connection pooling, proxying and load 
 balancing system for Unix and Linux supporting ODBC, Oracle, MySQL, mSQL, 
-PostgreSQL, Sybase, MS SQL Server, IBM DB2, Interbase, Lago and SQLite with 
-APIs for C, C++, Perl, Perl-DBD, Python, Python-DB, Zope, PHP, Ruby, Ruby-DBD, 
-Java and TCL, drop-in replacement libraries for MySQL and PostgreSQL clients,
-command line clients, a GUI configuration tool and extensive documentation.
-The APIs support advanced database operations such as bind variables, multi-row
-fetches, client side result set caching and suspended transactions.  It is
-ideal for speeding up database-driven web-based applications, accessing
-databases from unsupported platforms, migrating between databases, distributing
-access to replicated databases and throttling database access.
+PostgreSQL, Sybase, MS SQL Server, IBM DB2, Interbase, Lago, SQLite and
+MS Access (minimally) with APIs for C, C++, Perl, Perl-DBD, Python,
+Python-DB, Zope, PHP, Ruby, Ruby-DBD, Java and TCL, drop-in replacement
+libraries for MySQL and PostgreSQL clients, command line clients, a GUI
+configuration tool and extensive documentation.  The APIs support advanced
+database operations such as bind variables, multi-row fetches, client side
+result set caching and suspended transactions.  It is ideal for speeding up
+database-driven web-based applications, accessing databases from unsupported
+platforms, migrating between databases, distributing access to replicated
+databases and throttling database access.
