@@ -7,6 +7,7 @@
 	fixed freetds version check even more
 	INSTALL is moved to INSTALL.txt for OS X now
 	applied Matthias Klose's Zope configure patch
+	added mdbtools connection
 
 0.35 - added (slightly modified) pkgconfig stuff from Dolphpower's pkgconfig
 		patch
